--- a/Phaser/package.json
+++ b/Phaser/package.json
@@ -1,13 +1,12 @@
 {
   "name": "phaser",
   "version": "1.0.0",
-  "description": "",
+  "description": "Game on phaser game engine",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "",
+  "author": "Alexey Kadach",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
